refactor(egg): use PetSystemPromptTemplate for agent system prompt instead of LLM-generated personality
- Replace LLM-generated personality with PetSystemPromptTemplate.render()
  in hatch() and birth() flows.
- Assign rendered template to agent.system_prompt; stop setting
  pet.personality.
- Add @Transactional to birth() to keep pet + agent writes atomic.
- Remove PERSONALITY_PROMPT, DEFAULT_PERSONALITY and derivePersonality().
- Update PetServiceImplHatchTest to assert rendered system prompt and
  null personality.